--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Kopma UPNYK</h1>
     <a href="dashboard.html">- View Website</a>
     <br>
-    <a href="">- View Syntax</a>
+    <a href="https://github.com/Radhiwidya/KopmaV2/blob/main/dashboard.html">- View Syntax</a>
 </body>
 </html>
