--- a/dashboard.html
+++ b/dashboard.html
@@ -178,6 +178,24 @@
             margin-left: 0;
         }
 
+        .display-4 {
+            font-weight: bold
+        }
+
+        .view {
+            text-decoration: none;
+        }
+
+        .card-body-icon {
+            position: absolute;
+            color: white;
+            z-index: 0;
+            top: 25px;
+            right: 4px;
+            opacity: 0.4;
+            font-size: 100px;
+        }
+
         /* Responsive styles */
         @media (max-width: 768px) {
             .sidebar {
