--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Kopma UPNYK</h1>
+    <br>
+    <a href="https://kopma-upnvy.com/index.php">- View Website</a>
+    <br>
+    <a href="#">- View Syntax</a>
+    <br>
+    <p>version : 1.0.0</p>
+    <p>version : 2.0.0</p>
     <a href="dashboard.html">- View Website</a>
     <br>
     <a href="https://github.com/Radhiwidya/KopmaV2/blob/main/dashboard.html">- View Syntax</a>
