--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KopmaV2</title>
+    <title>Rakha | Kopma UPNYK</title>
 </head>
 <body>
     <h1>Kopma UPNYK</h1>
     <br>
     <p>version : 1.0.0</p>
     <a href="https://kopma-upnvy.com/index.php">- View Website</a>
-    <br>
     <a href="#">- View Syntax</a>
     <hr>
     <p>version : 2.0.0</p>
